# route-optimization

./: .gitignore  PROMPT_TEMPLATE.md  README.md  create_genie_space.py  deploy_notebook.py  pyproject.toml
app/: app.yaml
app/.databricks/sync-snapshots/: 6030c617f4771a2e.json
app/backend/: main.py  requirements.txt
app/backend/static/: index.html
app/frontend/: index.html  package-lock.json  package.json  vite.config.js
app/frontend/src/: App.css  App.jsx  api.js  main.jsx
app/frontend/src/components/: KPICard.jsx  Layout.jsx
app/frontend/src/pages/: DelayAnalysis.jsx  Fleet.jsx  RouteDashboard.jsx  RouteMap.jsx
northstar_route_optimization/: __init__.py  cleanup.py  deploy.py
